# ICFPC2022

./: .gitignore  README.md
.github/workflows/: portal.yml  s3-sync.yml
amylase/: dp.cpp  recurse.py
kawatea/: dp.cpp  dp2.cpp  dp_manual.cpp  eight.cpp  mono.cpp  multi.cpp  multi_auto.cpp  multi_wc_auto.cpp  one_color.cpp
kawatea/improved/: 2.txt  4.txt  5.txt  6.txt  7.txt
kawatea/with_color/: 1.txt  10.txt  2.txt  (+7 more)
kenkoooo/: Cargo.toml  README.md
kenkoooo/src/: fast.rs  heap.rs  io.rs  lib.rs  main.rs  parser.rs  scanner.rs  score.rs  types.rs
kenkoooo/src/ops/: color.rs  comment.rs  lcut.rs  merge.rs  mod.rs  pcut.rs  swap.rs
kenkoooo/src/strategies/: color_free_lunch.rs  mod.rs
lambda/: index.ts  package-lock.json  package.json  tsconfig.json
mkut/: 6.isl  block_master.cpp  color_pallet.cpp  four_dimensional.cpp  general_joint_draw.cpp  infinity_dimensional.cpp  joint_draw.cpp  main.cpp  manual_band.cpp  merge.cpp  newfound_adventure.cpp  no_waste.cpp  ordered.cpp  run.sh  search_border.cpp  similar_auto_border.cpp  similar_general_joint_draw.cpp  voyages_end.cpp
object-object-visualizer/: .gitignore  package-lock.json  package.json
output/: best_scores.json  ranking.json
png_parser/: 3.png.txt  parser.py
portal/: .prettierrc.json  index.ts  package-lock.json  package.json
preprocess/: reduce_color.py
rotate-flip/: isl.py  rotate.py  wrapper.py
sample/: build.sh  main.cpp  run.sh  sample-ai.sh  testrun.sh  upload.sh
shared/: tsconfig.json
unification-church/: sunmyung.py
yuusti/: gomi.cpp  kawatea-dp.cpp  main.cpp  search.cpp
(+6544 files in other folders)
