[package]
name = "kenkoooo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
ctrlc = "3.2.3"
image = "0.24.3"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
